force-app/main/default/objects/sugati__Supplier_Contact__c/sugati__Supplier_Contact__c.object-meta.xml
<CustomObject>
    <description>A list of contacts from the suppliers</description>
    <label>Supplier Contact</label>
    <nameField>
        <displayFormat>SC-{0000000000}</displayFormat>
        <label>Supplier Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>