force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__Marketing_Consortium__c.field-meta.xml
<CustomField>
    <fullName>sugati__Marketing_Consortium__c</fullName>
    <description>Marketing Consortia for OTUK reports</description>
    <label>Marketing Consortium</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virtuoso</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Ensemble</fullName>
            </value>
            <value>
                <fullName>TravellerMade</fullName>
            </value>
            <value>
                <fullName>Travel leaders</fullName>
            </value>
            <value>
                <fullName>None/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>