force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__SC_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supplier Contacts</relationshipLabel>
    <relationshipName>Supplier_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>