force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__SC_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>