force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__SC_Language__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>