force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__SC_Mobile__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>