force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__SC_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Name__c</fullName>
    <formula>TEXT(sugati__SC_Salutations__c) +&apos; &apos;+sugati__SC_First_Name__c+&apos; &apos;+sugati__SC_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>