force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__SC_Operating_Countries__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Operating_Countries__c</fullName>
    <label>Operating Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Countries</valueSetName>
    </valueSet>
</CustomField>