force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__SC_Phone__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>