force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__SC_Salutations__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Salutations__c</fullName>
    <label>Salutations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Dr</fullName>
            </value>
            <value>
                <fullName>Prof</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>