force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__SC_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Supplier Contacts</relationshipLabel>
    <relationshipName>Supplier_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>