force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__SC_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>