force-app/main/default/objects/sugati__Supplier_Contact__c/fields/sugati__Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Manifest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>